@startuml
title Logging System

package Log{

    class Logger {
        #logMessage : string
        --
        +Logger(message:string)
        +Log():void
    }

    class FileLogger {
        #filePath : string
        --
        +FileLogger(message:string)
        +FileLogger(message:string, path:string)
        +Log():void
    }

    class SecureFileLogger {
        --
        +SecureFileLogger(message:string, path:string)
        +Log():void
    }
}

hide empty members

FileLogger -up-|> Logger : <<extends>>
SecureFileLogger -up-|> FileLogger : <<extends>>

@enduml
